--- a/app/views/makings/edit.html.erb
+++ b/app/views/makings/edit.html.erb
@@ -1,14 +1,16 @@
 <div class="makings__edit--top">
+  <h3>パターン編集エリア</h3>
   <%= form_with url: making_path, method: :patch do | f | %>
   <%= f.hidden_field :id, value: @making.id %>
   <%= f.text_area :making_text, value: @making_pattern.join( "\n" ), class: "makings__edit--textarea", rows: @making_pattern.size, type: 'number' %>
-  <%= f.submit 'エミュレート', class: "makings__edit--submit" %>
-  <input type="button" value="左側から自動補完" class="makings__edit--autoComplementLeftSide" onclick="autoComplement( 'left' );">
-  <input type="button" value="右側から自動補完" class="makings__edit--autoComplementRightSide" onclick="autoComplement( 'right' );">
+  <%= f.submit '変更を保存', class: "makings__edit--submit" %>
   <% end %>
 </div>
 
 <div class="makings__edit--bottom">
+  <h3>作成中のパターン</h3>
+  <input type="button" value="左側に自動補完" class="makings__edit--autoComplementLeftSide" onclick="autoComplement( 'left' );">
+  <input type="button" value="右側に自動補完" class="makings__edit--autoComplementRightSide" onclick="autoComplement( 'right' );">
   <%= render 'patterns/emulation' %>
   <%= link_to '投稿(工事中)', ?#, class: "btn btn-default" %>
 </div>
@@ -16,10 +18,7 @@
 <script type="text/javascript">
   // パターン作成中は作業しやすいようにレイアウトを調整する
   $( function() {
-    $("body").css({'background-color': '#eee'});
-    // カテゴリ欄の削除
-    $(".application__layouts--leftSection").remove();
-    // パターン表示を画面最大に
-    $(".application__layouts--rightSection").removeClass().addClass('col-lg-12');
+    // ページ遷移時は「変更を保存」ボタンを非表示にする
+    $(".makings__edit--submit").css({ "display": "none" });
   });
 </script>
