--- a/app/views/patterns/_emulation.html.erb
+++ b/app/views/patterns/_emulation.html.erb
@@ -1,8 +1,5 @@
 <p class="patterns__show--lifeGameInterface">
-  <input type="button" value="開始" class="patterns__show--lifeGameStart" onclick="startProcess();">
-  <input type="button" value="一時停止" class="patterns__show--lifeGameStop" onclick="stopProcess();">
-  <input type="button" value="リフレッシュ" class="patterns__show--lifeGameRefresh"   onclick="initializeLifeGame();">
-  interval = 100ms
+  <%= render 'patterns/interface' %>
 </p>
 
 <p class="patterns__show--lifeGameInfo">
@@ -14,9 +11,12 @@
 </p>
 
 <script>
-  // lifegame/environment.jsの関数実行
-  // ライフゲームの表示初期化
   $(function(){
+    // カテゴリ欄の削除
+    $(".application__layouts--leftSection").remove();
+    // パターン表示を画面最大に
+    $(".application__layouts--rightSection").removeClass().addClass('col-lg-12');
+    // ライフゲームの表示初期化（lifegame/environment.js参照）
     initializeLifeGame();
   });
   // turbolinksのせいで２回実行されるが、
