--- a/app/views/post_comments/create.js.erb
+++ b/app/views/post_comments/create.js.erb
@@ -4,6 +4,6 @@
   alert( "<%= msg %>" );
   <% end %>
   <% else %>
-  $( ".comments__index h3" ).after( "<%= escape_javascript( render 'post_comments/article', comment: @comment ) %>" );
-  $( ".comments__form" ).val("");
+  $( ".comments__index--headline" ).after( "<%= escape_javascript( render 'post_comments/article', comment: @comment ) %>" );
+  $( ".comments__form--body" ).val("");
   <% end %>
