Update alert processing

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -12,5 +12,8 @@
  *
  *= require_tree ./common
  *= require_tree ./admin
+ *= require_self
  */
- 
+
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
