--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -12,4 +12,7 @@
  *
  *= require_tree ./common
  *= require_tree ./user
+ *= require_self
  */
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
