--- a/app/assets/stylesheets/user/makings.scss
+++ b/app/assets/stylesheets/user/makings.scss
@@ -16,8 +16,9 @@
       resize: vertical;
       width: 100%;
     }
-    &--submit {
-      display: none;
-    }
   }
+}
+
+#makings__edit--submit {
+  display: none;
 }
