--- a/app/views/makings/edit.html.erb
+++ b/app/views/makings/edit.html.erb
@@ -1,18 +1,19 @@
+
 <div class="makings__edit--top">
-  <h3>パターン編集エリア</h3>
   <%= form_with url: making_path, method: :patch do | f | %>
+  <h3>
+    パターン編集エリア
+    <%= render 'makings/edit_helper' %>
+    <!--「変更を保存」ボタンはデフォルトがdisplay: none;-->
+    <%= f.submit '変更を保存', class: "btn btn-success", id: "makings__edit--submit" %>
+  </h3>
   <%= f.hidden_field :id, value: @making.id %>
   <%= f.text_area :making_text, value: @making_pattern.join( "\n" ), class: "makings__edit--textarea", rows: @making_pattern.size, type: 'number' %>
-  <!--「変更を保存」ボタンはデフォルトがdisplay: none;-->
-  <%= f.submit '変更を保存', class: "makings__edit--submit" %>
-  <input type="button" value="検証" class="makings__edit--verification" onclick="verificationMakingPattern();">
   <% end %>
 </div>
 
 <div class="makings__edit--bottom">
   <h3>作成中のパターン</h3>
-  <input type="button" value="左側に自動補完" class="makings__edit--autoComplementLeftSide" onclick="autoComplement( 'left' );">
-  <input type="button" value="右側に自動補完" class="makings__edit--autoComplementRightSide" onclick="autoComplement( 'right' );">
   <%= render 'patterns/emulation' %>
   <%= link_to '投稿(工事中)', ?#, class: "btn btn-default" %>
 </div>
