--- a/app/views/makings/update.js.erb
+++ b/app/views/makings/update.js.erb
@@ -1,18 +1,18 @@
 <% if @convertion_error_message.present? then %>
 // データ変換エラーメッセージの表示
-alert("！！警告！！\n<%= @convertion_error_message %>");
+callMessageWindow( "danger", "<%= @convertion_error_message %>" );
 <% elsif @making.errors.any? then %>
 // バリデーションエラーメッセージの表示
-alert( "！！警告！！\n<%= @making.errors.full_messages.join( '\n' ) %>" );
+callMessageWindow( "danger", "<%= @making.errors.full_messages.join( '\n' ) %>" );
 <% else %>
+// 作成中パターンのデータ更新成功の通知
+callMessageWindow( "success", "更新に成功しました。" );
 // 画面表示への反映
 initializeLifeGame( "<%= @update_making_pattern.join( ?, ) %>".split(',') );
 // インターフェース（ボタン類）の復活
 $(".patterns__show--lifeGameInterface").html( "<%= escape_javascript( render 'patterns/interface' ) %>" );
-// 「変更を保存」ボタンを非表示にする
-$(".makings__edit--submit").css({ "display": "none" });
 // 更新したパターンを画面中央に戻す
 $(".patterns__show--lifeGameDisplay").css({ "text-align": "" });
-// 作成中パターンのデータが更新成功の通知
-alert("更新に成功しました。");
 <% end %>
+// 「変更を保存」ボタンを非表示にする（元々の設定に戻す）
+makingPatternSubmitButtonDisplay( false )
