--- a/app/views/patterns/_interface.html.erb
+++ b/app/views/patterns/_interface.html.erb
@@ -1,4 +1,3 @@
 <input type="button" value="開始" class="patterns__show--lifeGameStart" onclick="startProcess();">
 <input type="button" value="一時停止" class="patterns__show--lifeGameStop" onclick="stopProcess();">
-<input type="button" value="リフレッシュ" class="patterns__show--lifeGameRefresh"   onclick="initializeLifeGame( <%= @update_making_pattern || 0 %> );">
-interval = 100ms
+<input type="button" value="リフレッシュ" class="patterns__show--lifeGameRefresh"   onclick="initializeLifeGame( false, true );">
