--- a/app/assets/stylesheets/common/application.scss
+++ b/app/assets/stylesheets/common/application.scss
@@ -20,16 +20,24 @@
    }
    &__alert {
      &--common {
-       margin: 20px;
+       max-width: 80%;
+       min-width: 50%;
        display: none;
+       position: absolute;
+       top: 10px;
+       z-index: 10;
      }
      &--headline {
-       margin: 20px;
-       font-size: 28px;
-       font-weight: 900;
+       padding-left: 1em;
      }
      &--body {
-       padding-left: 50px;
+       font-size: 15px;
+       padding-left: 5em;
+       line-height: 2em;
+     }
+     &--closeButton {
+       width: 1.5em;
+       height: 1.5em;
      }
    }
  }
