--- a/app/views/layouts/_alert.html.erb
+++ b/app/views/layouts/_alert.html.erb
@@ -1,28 +1,54 @@
 <% if controller_name == 'makings' then %>
 <!--サクセスメッセージ-->
 <div class="alert alert-success application__alert--common application__alert--success" role="alert">
-  <h3 class="application__alert--headline">
+  <button type="button" class="close application__alert--closeButton" onclick="callMessageWindow();">
+    <span aria-hidden="true">
+      ×
+    </span>
+  </button>
+  <h3 class="alert-heading application__alert--headline">
     <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>
-     Success
+    Success
   </h3>
-  <p class="application__alert--body">成功です！！</p>
+  <hr>
+  <ul class="mb-0 application__alert--body">
+    <li>成功です！！</li>
+  </ul>
 </div>
 
 <!--警告メッセージ-->
 <div class="alert alert-warning application__alert--common application__alert--warning" role="alert">
-  <h3 class="application__alert--headline">
+  <button type="button" class="close application__alert--closeButton" onclick="callMessageWindow();">
+    <span aria-hidden="true">
+      ×
+    </span>
+  </button>
+  <h3 class="alert-heading application__alert--headline">
     <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
     Warning
   </h3>
-  <p class="application__alert--body">異常が検知されました。</p>
+  <hr>
+  <!-- <p class="mb-0 application__alert--body">異常が検知されました。</p> -->
+  <ul class="mb-0 application__alert--body">
+    <li>異常が検知されました。</li>
+  </ul>
 </div>
 
 <!--重要なメッセージ-->
 <div class="alert alert-danger application__alert--common application__alert--danger" role="alert">
-  <h3 class="application__alert--headline">
+  <button type="button" class="close application__alert--closeButton" onclick="callMessageWindow();">
+    <span aria-hidden="true">
+      ×
+    </span>
+  </button>
+  <h3 class="alert-heading application__alert--headline">
     <span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
     Danger
   </h3>
-  <p class="application__alert--body">重要な問題が検知されました。</p>
+  <hr>
+  <!-- <p class="mb-0 application__alert--body">重要な問題が検知されました。</p> -->
+  <ul class="mb-0 application__alert--body">
+    <li>重要な問題が検知されました。</li>
+  </ul>
 </div>
 <% end %>
