--- a/app/assets/stylesheets/common/post_comments.scss
+++ b/app/assets/stylesheets/common/post_comments.scss
@@ -8,6 +8,9 @@
   }
   &__article {
     word-wrap: break-word;
+    &--nothing {
+      font-size: 13px;
+    }
   }
   &__form {
     width: 100%;
