--- a/app/views/categories/_index.html.erb
+++ b/app/views/categories/_index.html.erb
@@ -1,3 +1,4 @@
+<!--patterns/_emulationが呼ばれる場合はテンプレート内jsメソッドにより除去されます-->
 <div class="categories__index">
   <h4 class='categories__index--headline'>
     <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
