--- a/app/views/favorites/_destroy.html.erb
+++ b/app/views/favorites/_destroy.html.erb
@@ -1,1 +1,2 @@
+<!--お気に入り解除表示用部分テンプレート-->
 <%= link_to "お気に入り解除", pattern_favorite_path( pattern_id ), method: :delete, remote: true, class: "favorites__destroy", data: {confirm: "お気に入りを解除しますか？"} %>
