--- a/app/views/layouts/_alert.html.erb
+++ b/app/views/layouts/_alert.html.erb
@@ -1,16 +1,22 @@
-<% if controller_name == 'makings' then %>
+<!--オリジナルアラート表示用部分テンプレート-->
+
+<!--パターン作成関連ページorパターンの新規投稿ページでのみ表示-->
+<% if /makings/.match?( controller_name ) || /new/.match( action_name ) && /patterns/.match?( controller_name ) then %>
 <!--サクセスメッセージ-->
 <div class="alert alert-success application__alert--common application__alert--success" role="alert">
   <button type="button" class="close application__alert--closeButton" onclick="callMessageWindow();">
+    <!--メッセージ削除アクション-->
     <span aria-hidden="true">
       ×
     </span>
   </button>
+  <!--メッセージタイトル-->
   <h3 class="alert-heading application__alert--headline">
     <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>
     Success
   </h3>
   <hr>
+  <!--メッセージ一覧-->
   <ul class="mb-0 application__alert--body">
     <li>成功です！！</li>
   </ul>
@@ -19,16 +25,18 @@
 <!--警告メッセージ-->
 <div class="alert alert-warning application__alert--common application__alert--warning" role="alert">
   <button type="button" class="close application__alert--closeButton" onclick="callMessageWindow();">
+    <!--メッセージ削除アクション-->
     <span aria-hidden="true">
       ×
     </span>
   </button>
+  <!--メッセージタイトル-->
   <h3 class="alert-heading application__alert--headline">
     <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
     Warning
   </h3>
   <hr>
-  <!-- <p class="mb-0 application__alert--body">異常が検知されました。</p> -->
+  <!--メッセージ一覧-->
   <ul class="mb-0 application__alert--body">
     <li>異常が検知されました。</li>
   </ul>
@@ -37,16 +45,18 @@
 <!--重要なメッセージ-->
 <div class="alert alert-danger application__alert--common application__alert--danger" role="alert">
   <button type="button" class="close application__alert--closeButton" onclick="callMessageWindow();">
+    <!--メッセージ削除アクション-->
     <span aria-hidden="true">
       ×
     </span>
   </button>
+  <!--メッセージタイトル-->
   <h3 class="alert-heading application__alert--headline">
     <span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
     Danger
   </h3>
   <hr>
-  <!-- <p class="mb-0 application__alert--body">重要な問題が検知されました。</p> -->
+  <!--メッセージ一覧-->
   <ul class="mb-0 application__alert--body">
     <li>重要な問題が検知されました。</li>
   </ul>
