--- a/app/views/members/edit.js.erb
+++ b/app/views/members/edit.js.erb
@@ -1,5 +1,8 @@
+// ユーザ情報編集セクション呼び出し処理
 <% if user_signed_in? then %>
+// ログイン中ユーザが呼び出せば、ユーザ情報編集セクションを表示する
 $(".members__show--divRight").html( "<%= escape_javascript( render 'members/detail', user: current_user ) %>" );
 <% else %>
-alert('This alert must not shown. Plese tell me this alert ahowing.');
+// 非ログインユーザの場合はエラーメッセージを返す
+alert('This alert must not shown.\nPlese tell me this alert ahowing.');
 <% end %>
