--- a/app/views/favorites/destroy.js.erb
+++ b/app/views/favorites/destroy.js.erb
@@ -1,4 +1,4 @@
-// パターン詳細画面で「お気に入り解除」された際のお気に入り項目の更新
+// 「お気に入り解除」後の処理 => 「お気に入り登録」表示に変更
 // liタグ中のグリフアイコンの追加
 spanTag = $(".favorites__destroy").closest('li').find("span").clone(true)
 // お気に入り数の抽出
