--- a/app/views/layouts/_headerMenue.html.erb
+++ b/app/views/layouts/_headerMenue.html.erb
@@ -1,34 +1,48 @@
+<!--ヘッダー用部分テンプレート-->
 <nav>
+  <!--各リンク-->
   <ul>
     <li><%= link_to "トップ", root_path %></li>
-    <!-- li><%= link_to "PCPLGとは？", about_path %></li -->
-    <li><%= link_to "about", about_path %></li>
+    <li><%= link_to "PCPLGとは？", about_path %></li>
     <li><%= link_to "投稿一覧", patterns_path %></li>
 
     <% if user_signed_in? then %>
+    <!--ログインユーザ用インターフェース-->
+
+    <!--プロフィール画像-->
     <li><%= attachment_image_tag current_user, :profile_image, size:"30x30", format: "jpeg", fallback: "no_image.jpg", size:"30x30" %></li>
+    <!--ドロップダウンリスト（トップ表記）-->
     <li id="menue-parent">
       こんにちは、<br>
       <%= current_user.name %>さん▼
+      <!--ドロップダウンリスト-->
       <ul id="menue-child">
         <li>
+          <!--タイトル-->
           <span class="glyphicon glyphicon-list" aria-hidden="true" style="color: rgba(0,0,0,0);"></span>　メニュー
         </li>
         <li>
+          <!--パターン新規作成ページへのリンク-->
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
           <%= link_to "　パターン作成", edit_making_path %>
         </li>
         <li>
+          <!--ログインユーザ中のページへのリンク-->
           <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
           <%= link_to "　マイページ", member_path( current_user ) %>
         </li>
         <li>
+          <!--ログアウト用リンク-->
           <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
           <%= link_to "　ログアウト", destroy_user_session_path, method: :delete %>
         </li>
       </ul>
     </li>
+
     <% else %>
+    <!--非ログインユーザ用インターフェース-->
+
+    <!--ウェルカムメッセージ-->
     <li style="text-align: left;">
       <%= link_to new_user_session_path do %>
       ようこそ！<br>
