--- a/app/views/makings/_edit_helper.html.erb
+++ b/app/views/makings/_edit_helper.html.erb
@@ -1,15 +1,27 @@
+<!--作成中パターンの操作用インターフェース-->
 
-<input type="button" value="検証" class="btn btn-primary makings__edit--verification" onclick="verificationMakingPattern();">
+<!--提出前・動作チェック前パターンの適性チェック用アクション-->
+<button type="button" name="verification" class="btn btn-primary makings__edit--verification" onclick="verificationMakingPattern();">
+	検証
+</button>
 
+<!--パターン加工処理-->
 <div class="btn-group">
+	<!--ドロップダウンボタンの表示-->
 	<button type="button" class="btn btn-danger">
 		一括処理
 	</button>
+
+	<!--ドロップダウン表示アクション-->
 	<button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
 		<span class="caret"></span>
 	</button>
+	
+	<!--ドロップダウンリスト-->
 	<ul class="dropdown-menu" role="menu">
+		<!--(1)ビット列の短い行に対する、「右側」への"0"の補完処理-->
 		<li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="autoComplement( 'right' ); return false;">自動補完（右側）</a></li>
+		<!--(2)ビット列の短い行に対する、「左側」への"0"の補完処理-->
 		<li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="autoComplement( 'left' ); return false;">自動補完（左側）</a></li>
 	</ul>
 </div>
