--- a/app/views/members/update.js.erb
+++ b/app/views/members/update.js.erb
@@ -1,5 +1,14 @@
+// ユーザ情報更新後の処理
 <% if @user.errors.any? then %>
-alert( "<%= @user.errors.full_messages.join( '<br>' ) %>" );
+// 表示中のバリデーションエラー用のclassを除去
+$("input").removeClass("application__errors--textField")
+// バリデーションエラーメッセージの表示
+callMessageWindow( "warning", "<%= @user.errors.full_messages.join( ?, ) %>".split(',') );
+// エラー項目にエラー用のclassを追加する
+<% @pattern.errors.each do | column, message | %>
+$(".members__edit--<%= column %>").addClass("application__errors--textField");
+<% end %>
 <% else %>
+// テキストフィールドを除去し、元の表示に戻す
 $(".members__show--divRight").html( "<%= escape_javascript( render 'members/detail', user: @user ) %>" );
 <% end %>
