--- a/app/views/patterns/show.html.erb
+++ b/app/views/patterns/show.html.erb
@@ -1,17 +1,33 @@
+<!--パターンのエミュレート用ページ-->
 
+<!--ページ上部-->
 <div class="patterns__show">
+  <!--パターン詳細情報-->
   <%= render 'patterns/property', pattern: @pattern %>
   <%= render 'patterns/article', pattern: @pattern, character_limit: 1000 %>
+  <!--ライフゲームエミュレート画面-->
   <%= render 'patterns/emulation' %>
 </div>
 
+<!--ページ下部-->
 <div class="clearfix patterns__show--bottom">
+  <!--ページ下部（左セクション）-->
   <div class="patterns__show--bottomLeft">
+    <!--投稿コメント一覧-->
     <div class="comments__index">
+      <!--コメント一覧ヘタイトル-->
       <h3 class="comments__index--headline">最新のコメント</h3>
+      <!--最新のコメント表示-->
+      <% if @latest_comment.nil? then %>
+      <p class="comments__article--nothing">
+        現在、この投稿に対するコメントはありません。
+      </p>
+      <% else %>
       <%= render 'post_comments/article', comment: @latest_comment %>
+      <% end %>
     </div>
 
+    <!--コメント投稿フォーム（ログインユーザのみ表示）-->
     <% if user_signed_in? then %>
     <div class="comments__form">
       <%= form_with url: pattern_post_comment_path( @pattern ) do | f |%>
@@ -22,11 +38,14 @@
     <% end %>
   </div>
 
+  <!--ページ下部（右セクション）-->
   <div class="patterns__show--bottomRight">
+    <!--関連するカテゴリ情報表示のタイトル-->
     <h3>
       <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
       このカテゴリに関連するパターン
     </h3>
+    <!--関連するカテゴリ１件表示-->
     <%= render 'patterns/article', pattern: @latest_same_category_pattern_sample, character_limit: 20 %>
     <%= link_to 'このカテゴリーのパターンを見に行く', patterns_path( category_id: @pattern.category_id) %>
   </div>
