--- a/app/views/post_comments/_article.html.erb
+++ b/app/views/post_comments/_article.html.erb
@@ -1,7 +1,10 @@
+<!--コメント詳細用部分テンプレート-->
 
 <p class="comments__article">
+  <!--投稿日時・投稿者情報-->
   <span class="patterns__submit--user">
     <%= "#{ date_format( comment.created_at ) } / #{ comment.user.name }" %><br>
   </span>
+  <!--コメント本文-->
   <%= comment.body %>
 </p>
