--- a/app/views/post_comments/create.js.erb
+++ b/app/views/post_comments/create.js.erb
@@ -1,9 +1,11 @@
+// コメント投稿後の処理
 <% if @comment.errors.any? then %>
-  <% @comment.errors.full_messages.each do | msg | %>
-  // コメントのバリデーション内容しか表示されないはず
-  alert( "<%= msg %>" );
-  <% end %>
-  <% else %>
-  $( ".comments__index--headline" ).after( "<%= escape_javascript( render 'post_comments/article', comment: @comment ) %>" );
-  $( ".comments__form--body" ).val("");
-  <% end %>
+// バリデーション内容をアラートで表示
+alert( "<%= @comment.errors.full_messages.join('\n') %>" );
+<% end %>
+<% else %>
+// 投稿内容をindexのトップに反映
+$( ".comments__index--headline" ).after( "<%= escape_javascript( render 'post_comments/article', comment: @comment ) %>" );
+// テキストエリアの初期化
+$( ".comments__form--body" ).val("");
+<% end %>
