--- a/app/views/makings/edit.html.erb
+++ b/app/views/makings/edit.html.erb
@@ -26,7 +26,7 @@
 
 <!--パターン新規作成画面への移動アクション-->
 <button type="button" name="movePatternsNew" id="patterns__new" class="btn btn-default" onclick="movePatternsNew('<%= new_pattern_path %>');">
-  <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span>
-  このパターンを投稿する
+  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+  このパターンを投稿する（パターン情報入力ページへ）
 </button>
 </div>
