--- a/app/views/patterns/show.html.erb
+++ b/app/views/patterns/show.html.erb
@@ -13,17 +13,21 @@
 <div class="clearfix patterns__show--bottom">
   <!--ページ下部（左セクション）-->
   <div class="patterns__show--bottomLeft">
-    <!--投稿コメント一覧-->
     <div class="comments__index">
-      <!--コメント一覧ヘタイトル-->
+      <!--コメント一覧タイトル-->
       <h3 class="comments__index--headline">最新のコメント</h3>
-      <!--最新のコメント表示-->
-      <% if @latest_comment.nil? then %>
+
+      <!--投稿コメント一覧-->
+      <% if @latest_comments.empty? then %>
+      <!--コメントがない場合の表示-->
       <p class="comments__article--nothing">
         現在、この投稿に対するコメントはありません。
       </p>
       <% else %>
-      <%= render 'post_comments/article', comment: @latest_comment %>
+      <!--最新のコメント5件まで表示-->
+      <% @latest_comments.reverse_each do | comment | %>
+      <%= render 'post_comments/article', comment: comment %>
+      <% end %>
       <% end %>
     </div>
 
@@ -45,8 +49,18 @@
       <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
       このカテゴリに関連するパターン
     </h3>
-    <!--関連するカテゴリ１件表示-->
-    <%= render 'patterns/article', pattern: @latest_same_category_pattern_sample, character_limit: 20 %>
-    <%= link_to 'このカテゴリーのパターンを見に行く', patterns_path( category_id: @pattern.category_id) %>
+
+    <% if @sampling_patterns.empty? then %>
+    <!--投稿がない場合の表示-->
+    <p class="patterns__article--nothing">
+      現在、このカテゴリに属する投稿はありません。
+    </p>
+    <% else %>
+    <!--同カテゴリの最新パターン2件まで表示-->
+    <% @sampling_patterns.reverse_each do | pattern | %>
+    <%= render 'patterns/article', pattern: pattern, character_limit: 20 %>
+    <% end %>
+    <%= link_to '関連するパターンを見に行く', patterns_path( category_id: @pattern.category_id) %>
+    <% end %>
   </div>
 </div>
