--- a/app/assets/stylesheets/common/application.scss
+++ b/app/assets/stylesheets/common/application.scss
@@ -42,9 +42,9 @@
    }
    &__errors {
      &--textField {
-       border: thin solid red;
-       background-border: rgba( 100, 0, 0, 0.2 );
-       background-color: rgba( 255, 0, 0, 0.1 );
+       border: thin solid red !important;
+       background-border: rgba( 100, 0, 0, 0.2 ) !important;
+       background-color: rgba( 255, 0, 0, 0.1 ) !important;
      }
    }
  }
