--- a/app/views/makings/edit.html.erb
+++ b/app/views/makings/edit.html.erb
@@ -25,7 +25,7 @@
   <%= render 'patterns/emulation' %>
 
 <!--パターン新規作成画面への移動アクション-->
-<button type="button" name="movePatternsNew" id="patterns__new" class="btn btn-default" onclick="movePatternsNew('<%= new_pattern_path %>');">
+<button type="button" name="movePatternsNew" id="patterns__new" class="btn btn-default" onclick="jumpPatternsNew('<%= new_pattern_path %>');">
   <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
   このパターンを投稿する（パターン情報入力ページへ）
 </button>
