install  'dotenv-rails' gem

--- a/app/views/patterns/_interface.html.erb
+++ b/app/views/patterns/_interface.html.erb
@@ -2,7 +2,7 @@
 
 <!--リセットアクション-->
 <button type="button" name="refresh" class="btn btn-default patterns__show--lifeGameRefresh" onclick="initializeLifeGame( false, true );">
-  <span class="glyphicon glyphicon-step-backward" aria-hidden="true"></span>
+  <i class="fas fa-eraser"></i>
   リセット
 </button>
 
