--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag    "user", media: "all", "data-turbolinks-track": "reload" %>
   <%= javascript_include_tag "user", "data-turbolinks-track": "reload" %>
+  <script src="https://kit.fontawesome.com/<%= ENV['FONT_AWESOME_API'] %>.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
