--- a/app/views/patterns/new.html.erb
+++ b/app/views/patterns/new.html.erb
@@ -5,17 +5,10 @@
   <h3>投稿前パターン情報入力</h3>
 
   <%= form_with model: @pattern, class: "form-horizontal" do | f | %>
-  <!--四方向のマージン（自動入力）-->
-  <%= f.hidden_field :margin_top, readonly: true %>
-  <%= f.hidden_field :margin_bottom, readonly: true %>
-  <%= f.hidden_field :margin_left, readonly: true %>
-  <%= f.hidden_field :margin_right, readonly: true %>
-  <!--正規化行数列（自動入力）-->
-  <%= f.hidden_field :normalized_rows_sequence, readonly: true %>
 
   <!--パターン名（入力必須）-->
   <div class="form-group">
-    <%= f.label :name, 'パターンの名前', class: "col-sm-2 control-label" %>
+    <%= f.label :name, ' パターンの名前', class: "fas fa-pencil-alt col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.text_field :name, class: "form-control" %>
     </div>
@@ -23,7 +16,7 @@
 
   <!--カテゴリ選択（デフォルト：未分類）-->
   <div class="form-group">
-    <%= f.label :category_id, 'カテゴリ', class: "col-sm-2 control-label" %>
+    <%= f.label :category_id, ' カテゴリ', class: "far fa-folder-open col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.select :category_id, Category.pluck( :name, :id ).to_h %>
     </div>
@@ -31,7 +24,7 @@
 
   <!--表示形式選択（デフォルト：Default 1）-->
   <div class="form-group">
-    <%= f.label :display_format_id, 'セルの表示形式', class: "col-sm-2 control-label" %>
+    <%= f.label :display_format_id, ' セルの表示形式', class: "fas fa-th-large col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.select :display_format_id, DisplayFormat.pluck( :name, :id ).to_h %>
     </div>
@@ -39,7 +32,7 @@
 
   <!--このパターン紹介文（入力必須）-->
   <div class="form-group">
-    <%= f.label :introduction, 'このパターン紹介文', class: "col-sm-2 control-label" %>
+    <%= f.label :introduction, ' このパターン紹介文', class: "fas fa-pencil-alt col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.text_area :introduction, rows: 3, class: "form-control" %>
     </div>
@@ -47,11 +40,20 @@
 
   <!--パターンのイメージ-->
   <div class="form-group">
-    <%= f.label :iimage_id, class: "col-sm-2 control-label" %>
+    <%= f.label :image_id, " イメージ画像", class: "fas fa-image col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.attachment_field :image, placeholder: "アピール画像" %>
+      <%= f.attachment_field :image %>
     </div>
   </div>
+
+  <!--四方向のマージン（自動入力）-->
+  <%= f.hidden_field :margin_top, readonly: true %>
+  <%= f.hidden_field :margin_bottom, readonly: true %>
+  <%= f.hidden_field :margin_left, readonly: true %>
+  <%= f.hidden_field :margin_right, readonly: true %>
+
+  <!--正規化行数列（自動入力）-->
+  <%= f.hidden_field :normalized_rows_sequence, readonly: true %>
 
   <!--投稿ボタン-->
   <%= f.submit "これで投稿する", class: "btn btn-primary patterns__new--submit" %>
